# slm-packager

./: IMPROVEMENTS.md  README.md  pyproject.toml
docs/: GGUF_GUIDE.md  INIT_GUIDE.md  MODEL_FORMATS.md  QUICKSTART.md
examples/: README.md  tinyllama-example.yaml  tinyllama-gguf.yaml
slm_packager/api/: server.py
slm_packager/cli/: main.py
slm_packager/config/: loader.py
slm_packager/quantization/: quantizers.py
slm_packager/registry/: models.json
slm_packager/runtime/: llama_cpp.py  onnx.py  transformers.py
